Undirected graph class